# django-blockinclude

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  testmanage.py  tox.ini
.github/: pull_request_template.md
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
blockinclude/: __init__.py  apps.py  components.py  string.py
blockinclude/templates/: .gitignore
blockinclude/templatetags/: blockinclude.py
blockinclude/test/: apps.py  settings.py  urls.py
blockinclude/test/example/: components.py  views.py
blockinclude/test/example/templates/: _base.html  _test-base.html
blockinclude/test/example/templates/components/: list-section.html  section.html
blockinclude/test/example/templates/includes/: static-paragraph.html  the-box.html  the-slotted-box.html
blockinclude/test/example/templates/pages/: index.html  kitchen-sink.html  tag-examples.html
blockinclude/test/example/templates/tests/: test-00-basic-include.html  test-01-blockinclude-with-simple-text-content.html  test-02-blockinclude-content-with-markup.html  test-02-blockinclude-passes-markup-content-from-parent.html  test-03-blockinclude-content-with-template-logic.html  test-04-blockinclude-does-not-pollute-parent-context.html  test-05-blockinclude-takes-kwargs.html  test-06-blockinclude-block-content-overrides-kwarg.html  test-07-blockinclude-recursion.html  test-08-slot-content-with-markup.html  test-09-slot-content-with-template-logic.html  test-10-multiple-slots.html  test-11-slot-order-does-not-matter.html  test-12-slot-surrounded-by-blockinclude-content.html  test-13-slot-overrides-kwarg.html  test-14-slot-named-content-is-overridden.html  test-14-slot-named-content-raises-error.html  test-15-only-does-not-remove-content-or-slot.html  test-16-content-variable-in-parent.html  test-16-repeated-render.html  test-17-slot-does-not-pollute-parent-context.html  test-18-conditional-slots.html  test-18-conditionally-excluded-slot.html  test-19-slot-outside-blockinclude.html  test-20-conditional-blockinclude.html  test-basic-include.html  test-blockinclude-passes-content-from-parent.html
blockinclude/test/tests/: test_components.py  test_templates.py  test_views.py
blockinclude/tests/: test_components.py  test_string.py  utils.py
blockinclude/tests/test_templatetags/: test_block_include.py  test_blockinclude.py  test_laces.py
